# kedro-ml-example

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  get_model.sh  pyproject.toml
conf/base/: catalog.yml  globals.yml
conf/base/parameters/: sub_churn_batch_predict.yml  sub_churn_score.yml  sub_churn_train.yml
conf/game2_env/: globals.yml
conf/game2_env/parameters/: sub_churn_train.yml
data/01_raw/: character_data.csv  sub_data.csv  sub_miss.csv
docs/source/: conf.py
notebooks/power_consumption/: 00_data_prep.ipynb  01_baseline_prophet.ipynb  02_random_forest.ipynb  README.md
src/: setup.py
src/kedro_ml/: __main__.py  pipeline_registry.py  pipeline_utils.py  settings.py
src/kedro_ml/pipelines/: __init__.py
src/kedro_ml/pipelines/sub_churn_batch_predict/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_ml/pipelines/sub_churn_batch_score/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_ml/pipelines/sub_churn_score/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_ml/pipelines/sub_churn_standard_features/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_ml/pipelines/sub_churn_train/: README.md  __init__.py  pipeline.py
src/kedro_ml/pipelines/sub_churn_train/nodes/: __init__.py  add_currency_features.py  in_sample_error.py  train_pipeline.py
src/kedro_ml/utils/: __init__.py  feature_transformations.py  scoring.py
src/kedro_ml/utils/sub_churn_features/: __init__.py  sub_churn_currency_features.py  sub_churn_general_features.py
