[tool.poetry]
name = "kedro-ml"
version = "0.1.0"
description = ""
authors = ["James Boland <james@jboland.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
scikit-learn = "^1.2.2"
feature-engine = "^1.5.2"
pandas = "^1.5.3"
notebook = "^6.5.3"
kedro = "^0.18.6"
kedro-viz = "^5.3.0"
prophet = "^1.1.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "kedro_ml"
project_name = "kedro-ml"
kedro_init_version = "0.18.6"

[tool.isort]
profile = "black"
